--- a/TVMAZE-API/style.css
+++ b/TVMAZE-API/style.css
@@ -8,8 +8,9 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    margin: 0;
-    padding: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 0px;
+    padding: 0px;
 
 
 
@@ -18,33 +19,66 @@ body {
 header nav,
 menu nav,
 main section {
-    background-color: rgba(165, 10, 10, 0.452);
+    background-color: rgba(90, 65, 65, 0.658);
     font-size: 20px;
     font-weight: bold;
-    color: rgb(255, 255, 255);
-
+    border-radius: 10px;
     text-align: center;
+    -webkit-border-radius: 10;
+    -moz-border-radius: 10;
+    -ms-border-radius: 10;
+    -o-border-radius: 10;
+}
+
+header div>a {
+    background-image: linear-gradient(90deg, rgb(122, 93, 93) 0%, rgb(194, 15, 15) 100%);
+    padding: 20px;
+    border-radius: 5px;
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    -ms-border-radius: 5;
+    -o-border-radius: 5;
+}
+
+header a:hover {
+    background-image: linear-gradient(90deg, rgb(128, 15, 15) 0%, rgb(122, 93, 93) 100%);
+    border-radius: 10px;
+    -webkit-border-radius: 10;
+    -moz-border-radius: 10;
+    -ms-border-radius: 10;
+    -o-border-radius: 10;
 }
 
 div.card-img-overlay {
     background-color: rgba(0, 0, 0, 0.418);
     color: #fff;
     padding: 20px;
-    text-align: center;
+    text-align: start;
 }
 
 div.card-img-overlay:hover {
     background-color: rgba(0, 0, 0, 0);
     color: #fff;
-    padding: 20px;
-    text-align: center;
+    
+    
+}
+div h3.cardRating {
+    background-color: #420707;
+    border-radius:5px;
+    font-size: large;
+    color: white;    
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    -ms-border-radius:5px;
+    -o-border-radius:5px;
 }
 
-div.card-img-overlay h5,
-p {
+div.cardBody {
+    width: 100%;
+    background-color: #42070798;    
     font-size: medium;
-    color: #f0cd08;
-
+    color: #dddbce;
+    text-align: center;
 }
 
 main.container {
@@ -54,13 +88,70 @@ main.container {
 }
 
 .rigthCategory {
-    flex: 1;
-}
-
-.categorys {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    background-color: rgba(90, 65, 65, 0.521);
+    border-radius: 10px;
     cursor: pointer;
     font-size: 1.3rem;
+    color: black;
+    text-align: start;
+
+}
+
+.category-link>h2 {
+    border-radius: 5px;
+    background-image: linear-gradient(90deg, rgb(117, 14, 14) 0%, rgb(49, 27, 27) 100%);
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: rgb(238, 219, 219);
+    text-align: center;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.category-link>h2:hover {
+    border-radius: 5px;
+    background-image: linear-gradient(90deg, rgb(99, 27, 27) 0%, rgb(185, 27, 27) 100%);
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: rgb(238, 195, 195);
+    text-align: center;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+#sectionCard {
+    background-color: rgba(90, 65, 65, 0.521);
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 1.3rem;
+    color: black;
+    text-align: start;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+
+/* CSS ile sayfa üzerindeki kaydırma çubuğunun rengini değiştirme */
+::-webkit-scrollbar {
+    width: 15px;
+    /* Kaydırma çubuğu genişliği */
+
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #f0cd08;
+    /* Kaydırma çubuğu rengi */
+    border-radius: 6px;
+    /* Kenar yarıçapı */
+}
+
+::-webkit-scrollbar-track {
+    background-color: #1f1212;
+    /* Kaydırma çubuğu arka plan rengi */
 }
